# mycqmathutil

./: .gitignore  pyproject.toml
src/: __init__.py  mycqmathutil.py  myswparameter.py
src/mycqmathutil.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
