requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myswparameter"
version = "0.0.1"
authors = [
    { name = "my Author", email = "author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/aruig666/mycqmathutil"
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
